added intializer function that will render all time stamps to the DOM upon loading web page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <ul id="timeStamps" class="col-2"></ul>
+      <div id="dailyEvents" class="col-8"></div>
+      <div id="saveButtons" class="col-2"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
