added previously determined css classes to the custom html tags created in initializer function to add my own flavor into the program

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container row">
+    <div class="container-fluid d-flex row">
       <!-- Timeblocks go here -->
       <ul id="timeStamps" class="col-2"></ul>
-      <ul id="dailyEvents" class="col-8"></ul>
+      <div id="dailyEvents" class="col-8"></div>
       <div id="saveButtons" class="col-2"></div>
     </div>
 
