--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <ul id="timeStamps" class="col-2"></ul>
       <div id="dailyEvents" class="col-8"></div>
       <div id="saveButtons" class="col-2"></div>
+      <button id="clearAllEvents" class=" col-12 customClearBtn">Clear Schedule</button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
